--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
 INCLUDE_DIRECTORIES(../lib ../include)
 set(HEADERS ../lib/tinyxml2.h)
 set(PREPROCESS_SRC preprocess.cc)
+set(GROUP_SRC group.cc)
 ADD_EXECUTABLE(PreProcess ${PREPROCESS_SRC})
-TARGET_LINK_LIBRARIES(PreProcess tinyxml2 z)
+ADD_EXECUTABLE(Group ${GROUP_SRC})
+TARGET_LINK_LIBRARIES(PreProcess tinyxml2)
+TARGET_LINK_LIBRARIES(Group tinyxml2)
