--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 PROJECT(SeqOthello)
 find_package (Threads)
 find_package (ZLIB REQUIRED )
-add_definitions(-std=gnu++11)
+add_definitions(-std=gnu++11 -march=native)
 ADD_SUBDIRECTORY(lib)
+ADD_SUBDIRECTORY(seqothlib)
 ADD_SUBDIRECTORY(test)
 ADD_SUBDIRECTORY(src bin)
 
