--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,8 @@ ADD_EXECUTABLE(PreProcess ${PREPROCESS_SRC})
 TARGET_LINK_LIBRARIES(PreProcess tinyxml2)
 
 ADD_EXECUTABLE(Group ${GROUP_SRC})
-TARGET_LINK_LIBRARIES(Group tinyxml2)
+TARGET_LINK_LIBRARIES(Group tinyxml2 libUtil)
 
-#ADD_EXECUTABLE(Build ${BUILD_SRC})
-#TARGET_LINK_LIBRARIES(Build tinyxml2 z)
+ADD_EXECUTABLE(Build ${BUILD_SRC})
+TARGET_LINK_LIBRARIES(Build tinyxml2 z libL2Node)
 
