--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(HEADERS ../lib/tinyxml2.h)
 set(PREPROCESS_SRC preprocess.cc)
 set(GROUP_SRC group.cc)
 set(BUILD_SRC build.cc)
+set(QUERY_SRC query.cc)
 
 ADD_EXECUTABLE(PreProcess ${PREPROCESS_SRC})
 TARGET_LINK_LIBRARIES(PreProcess tinyxml2)
@@ -14,3 +15,5 @@ TARGET_LINK_LIBRARIES(Group tinyxml2 libUtil)
 ADD_EXECUTABLE(Build ${BUILD_SRC})
 TARGET_LINK_LIBRARIES(Build tinyxml2 z libL2Node pthread)
 
+ADD_EXECUTABLE(Query ${QUERY_SRC})
+TARGET_LINK_LIBRARIES(Query tinyxml2 z libL2Node pthread)
