--- a/seqothlib/CMakeLists.txt
+++ b/seqothlib/CMakeLists.txt
@@ -15,7 +15,7 @@ add_library(libUtil STATIC ${libUtil_SRCS})
         add_library(libL2Node STATIC
     ${libL2Node_SRCS}
 )
-TARGET_LINK_LIBRARIES(libL2Node libUtil z)
+TARGET_LINK_LIBRARIES(libL2Node libUtil tinyxml2 z)
 
 # Specify here the include directories exported
 # by this library
