--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -2,7 +2,8 @@ file(GLOB SRCS *.cpp)
 
 INCLUDE_DIRECTORIES(../../lib ../../seqothlib)
 
-ADD_EXECUTABLE(testL2Node ${SRCS})
+ADD_EXECUTABLE(testL2Node testL2Node.cpp main.cpp)
+ADD_EXECUTABLE(testL1Node testL1Node.cpp main.cpp)
 
 TARGET_LINK_LIBRARIES(testL2Node
     libL2Node
@@ -11,5 +12,11 @@ TARGET_LINK_LIBRARIES(testL2Node
     z
 )
 
+TARGET_LINK_LIBRARIES(testL1Node
+    libL1Node
+    libgtest
+    libgmock
+    z
+)
 add_test(NAME testfoo
          COMMAND testfoo)
