use mulothello to do L1

--- a/seqothlib/CMakeLists.txt
+++ b/seqothlib/CMakeLists.txt
@@ -8,14 +8,21 @@ set (libUtil_SRCS
     util.cpp
 )
 
+set (libL1Node_SRCS
+    L1Node.hpp
+    L1Node.cpp
+    )
 # Declare the library
 
 add_library(libUtil STATIC ${libUtil_SRCS})
 
-        add_library(libL2Node STATIC
-    ${libL2Node_SRCS}
-)
+add_library(libL2Node STATIC ${libL2Node_SRCS}) 
+
+add_library(libL1Node STATIC ${libL1Node_SRCS}) 
+
 TARGET_LINK_LIBRARIES(libL2Node libUtil tinyxml2 z)
+
+TARGET_LINK_LIBRARIES(libL1Node libUtil tinyxml2 z)
 
 # Specify here the include directories exported
 # by this library
