--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,10 @@
 INCLUDE_DIRECTORIES(../lib ../seqothlib)
-ADD_EXECUTABLE(datagen datagen.cc)
 
 find_package(Threads REQUIRED)
+
+ADD_EXECUTABLE(datagen datagen.cc)
+ADD_EXECUTABLE(testL1 testL1.cpp)
+TARGET_LINK_LIBRARIES(testL1 tinyxml2 z libL2Node libL1Node pthread)
 
 # Enable ExternalProject CMake module
 include(ExternalProject)
