fixes on master

--- a/seqothlib/CMakeLists.txt
+++ b/seqothlib/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(libL1Node STATIC ${libL1Node_SRCS})
 
 TARGET_LINK_LIBRARIES(libL2Node libUtil tinyxml2 z)
 
-TARGET_LINK_LIBRARIES(libL1Node libUtil tinyxml2 z)
+TARGET_LINK_LIBRARIES(libL1Node libUtil tinyxml2 z pthread)
 
 # Specify here the include directories exported
 # by this library
