--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG "-g -pg -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "-g  -O0")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 PROJECT(SeqOthello)
