move test to test mode in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,6 @@ add_definitions(-std=gnu++11 -march=native)
 ADD_SUBDIRECTORY(lib)
 ADD_SUBDIRECTORY(seqothlib)
 ADD_SUBDIRECTORY(src bin)
-ADD_SUBDIRECTORY(test)
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+    ADD_SUBDIRECTORY(test)
+endif()
