aggregated online query

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,10 +16,10 @@ ADD_EXECUTABLE(Build ${BUILD_SRC})
 TARGET_LINK_LIBRARIES(Build tinyxml2 z pthread libL2Node libL1Node)
 
 ADD_EXECUTABLE(Query ${QUERY_SRC})
-TARGET_LINK_LIBRARIES(Query tinyxml2 z pthread libL2Node libL1Node mytcp)
+TARGET_LINK_LIBRARIES(Query tinyxml2 z pthread libL2Node libL1Node smalltcp)
 
 ADD_EXECUTABLE(Client client.cc)
-TARGET_LINK_LIBRARIES(Client pthread mytcp)
+TARGET_LINK_LIBRARIES(Client pthread smalltcp)
 
 ADD_EXECUTABLE(Test testL1Node.cpp)
 TARGET_LINK_LIBRARIES(Test tinyxml2 z pthread libL2Node libL1Node)
