--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,5 @@
 SET(LibTinyXML_SRC tinyxml2.cpp)
 ADD_LIBRARY(tinyxml2 STATIC ${LibTinyXML_SRC})
 
-SET(LibMyTCP_SRC PracticalSocket.cpp)
-ADD_LIBRARY(mytcp STATIC ${LibMyTCP_SRC})
+SET(LibTCP_SRC socket.cpp)
+ADD_LIBRARY(smalltcp STATIC ${LibTCP_SRC})
