--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(PREPROCESS_SRC preprocess.cc)
 set(GROUP_SRC group.cc)
 set(BUILD_SRC build.cc)
 set(QUERY_SRC query.cc)
+set(PRINT_SRC printrates.cc)
 
 ADD_EXECUTABLE(PreProcess ${PREPROCESS_SRC})
 TARGET_LINK_LIBRARIES(PreProcess tinyxml2)
@@ -17,6 +18,9 @@ TARGET_LINK_LIBRARIES(Build tinyxml2 z pthread libL2Node libL1Node)
 
 ADD_EXECUTABLE(Query ${QUERY_SRC})
 TARGET_LINK_LIBRARIES(Query tinyxml2 z pthread libL2Node libL1Node smalltcp)
+
+ADD_EXECUTABLE(PrintRates ${PRINT_SRC})
+TARGET_LINK_LIBRARIES(PrintRates tinyxml2 z pthread libL2Node libL1Node smalltcp)
 
 ADD_EXECUTABLE(Client client.cc)
 TARGET_LINK_LIBRARIES(Client pthread smalltcp)
