add jellyfish to docker

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-INCLUDE_DIRECTORIES(../lib ../seqothlib)
+INCLUDE_DIRECTORIES(../lib ../seqothlib ../Jellyfish/include ../Jellyfish ../Jellyfish)
 set(HEADERS ../lib/tinyxml2.h)
 
 set(PREPROCESS_SRC preprocess.cc)
@@ -7,8 +7,13 @@ set(BUILD_SRC build.cc)
 set(QUERY_SRC query.cc)
 set(PRINT_SRC printrates.cc)
 
+ADD_LIBRARY(Jellyfish_Json STATIC ../Jellyfish/lib/jsoncpp.cpp)
+ADD_LIBRARY(Jellyfish_Matrix STATIC ../Jellyfish/config.h ../Jellyfish/lib/rectangular_binary_matrix.cc)
+SET_TARGET_PROPERTIES(Jellyfish_Matrix PROPERTIES COMPILE_FLAGS "-DHAVE_CONFIG_H")
+ADD_LIBRARY(Jellyfish_Mer_DNA STATIC ../Jellyfish/lib/mer_dna.cc)
+
 ADD_EXECUTABLE(PreProcess ${PREPROCESS_SRC})
-TARGET_LINK_LIBRARIES(PreProcess tinyxml2)
+TARGET_LINK_LIBRARIES(PreProcess tinyxml2 Jellyfish_Json Jellyfish_Matrix Jellyfish_Mer_DNA)
 
 ADD_EXECUTABLE(Group ${GROUP_SRC})
 TARGET_LINK_LIBRARIES(Group pthread tinyxml2 libUtil)
@@ -27,4 +32,7 @@ TARGET_LINK_LIBRARIES(Client pthread smalltcp)
 
 ADD_EXECUTABLE(Test testL1Node.cpp)
 TARGET_LINK_LIBRARIES(Test tinyxml2 z pthread libL2Node libL1Node)
+
+ADD_EXECUTABLE(Dump dump_main.cc)
+TARGET_LINK_LIBRARIES(Dump Jellyfish_Json Jellyfish_Matrix Jellyfish_Mer_DNA)
 
